--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Program Files\\Java\\jdk1.8.0_144","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"J2SE-1.5"}},"jre:jre:1.5.0"],[{"location":"C:\\Users\\jorge\\.m2\\repository\\org\\seleniumhq\\selenium\\selenium-api\\3.10.0\\selenium-api-3.10.0.jar","type":"JAR","hints":{}},"ABSENT"]]
+[[{"location":"C:\\Users\\jorge\\.m2\\repository\\org\\seleniumhq\\selenium\\selenium-api\\3.11.0\\selenium-api-3.11.0.jar","type":"JAR","hints":{}},"ABSENT"]]
