--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Users\\jorge\\.m2\\repository\\org\\seleniumhq\\selenium\\selenium-api\\3.11.0\\selenium-api-3.11.0.jar","type":"JAR","hints":{}},"ABSENT"]]
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_144","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"C:\\Users\\jorge\\.m2\\repository\\commons-cli\\commons-cli\\1.4\\commons-cli-1.4.jar","type":"JAR","hints":{}},"commons-cli:commons-cli:1.4.0"]]
