--- a/2.2-LibrairyConection/pom.xml
+++ b/2.2-LibrairyConection/pom.xml
@@ -37,11 +37,19 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>com.tfg.mainPackage.ExecuteAll</mainClass>
+							<mainClass>com.tfg.LibrairyConection.ExecuteAll</mainClass>
 						</manifest>
 					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
 				</configuration>
 			</plugin>
 		</plugins>
